2A/05_Projet_GL/src/test/deca/context/invalid/complet/37_aff_string_Object.deca
// Description :
//   afféctation string dans Object 
// Resultats :
//    ligne 10 :le string ne peut pas être affecté à Object
// Historique :
//  cree le 16/01/2024

{
    Object o ;
    o = "bonjour" ; 
}